<resources>
    <string name="app_name" translatable="false">NewsApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="mode">Mode</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="lightMode">Light Mode</string>
    <string name="darkMode">Dark Mode</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- Strings used for fragments for navigation -->
    <!--    <string name="next">Next</string>-->

    <string name="choose_country_of_news">Choose Country of News</string>
    <string name="choose_category_of_news">Choose Category of News</string>
    <string name="choose_lang_of_news">Choose Language of News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="see_all">See all</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="breaking_news" >Breaking News</string>
    <string name="home">Home</string>
    <string name="saved_news">Saved News</string>
    <string name="search_news">Search News</string>
    <string name="settings">Settings</string>


</resources>