<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/BACKGROUND"

    tools:context=".ui.fragments.LanguageFragment">

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="50dp"
      android:layout_height="50dp"
      android:layout_margin="10dp"
      android:src="@drawable/language"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.054" />


  <TextView
      android:id="@+id/textView7"
      style="@style/TEXT"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/language"
      android:textSize="20sp"
      android:layout_marginTop="10dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView"
      app:layout_constraintVertical_bias="0.025" />

  <RadioGroup
      android:id="@+id/langGroup"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="10dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="28dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView7">

    <RadioButton
        android:id="@+id/radio_button_en"
        style="@style/TEXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="9dp"
        android:text="@string/english"
        android:textSize="14dp" />

    <RadioButton
        android:id="@+id/radio_button_ar"
        style="@style/TEXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="9dp"
        android:text="@string/arabic"
        android:textSize="14dp" />
  </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>